<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment"
    android:background="@color/dark_grey">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headlineLoginWakey"
        android:textAppearance="@style/TextAppearance.Wakey.BodyLarge.Bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin_56dp"/>

    <TextView
        android:id="@+id/tv_login_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_login_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/descriptionLoginWakey"
        android:textAppearance="@style/TextAppearance.Wakey.BodyMedium.Regular"
        android:textColor="@color/white"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Username"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_login_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_64dp"
        android:padding="@dimen/padding_4dp"
        app:hintEnabled="false"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/labelEnterUsername"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:background="@drawable/bg_input_grey"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        app:layout_constraintTop_toBottomOf="@id/til_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_24dp"
        android:padding="@dimen/padding_4dp"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/labelPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:background="@drawable/bg_input_grey"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="@dimen/margin_237dp"
        android:layout_marginTop="@dimen/margin_13dp"
        android:text="@string/labelRecoverPassword"
        android:textAppearance="@style/TextAppearance.Wakey.LabelSmall.Regular"
        android:textColor="@color/white"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signin_real"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelSignInWakey"
        android:textAppearance="@style/TextAppearance.Wakey.LabelMedium.Bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_password"
        android:background="@drawable/bg_btn_gradient"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/margin_72dp"
        android:layout_marginHorizontal="@dimen/margin_16dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_signin_real"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_48dp"
        android:layout_marginHorizontal="@dimen/margin_34dp"
        android:paddingHorizontal="@dimen/padding_10dp">
        <View
            android:id="@+id/v_line1"
            android:layout_width="@dimen/line_130dp"
            android:layout_height="@dimen/line_2dp"
            android:background="@color/gray"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:id="@+id/tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelOr"
            android:textAppearance="@style/TextAppearance.Wakey.LabelMedium.Bold"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/v_line2"
            app:layout_constraintStart_toEndOf="@id/v_line1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <View
            android:id="@+id/v_line2"
            android:layout_width="@dimen/line_130dp"
            android:layout_height="@dimen/line_2dp"
            android:background="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ib_apple"
        android:layout_width="@dimen/width_72dp"
        android:layout_height="@dimen/width_56dp"
        app:layout_constraintTop_toBottomOf="@id/cl_or"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ib_google"
        android:src="@drawable/img_apple"
        android:scaleType="fitCenter"
        android:padding="@dimen/padding_15dp"
        android:contentDescription="@string/labelButtonApple"
        android:layout_marginTop="@dimen/margin_24dp"
        android:layout_marginLeft="@dimen/margin_56dp"
        android:background="@drawable/bg_btn_or"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ib_google"
        android:layout_width="@dimen/width_72dp"
        android:layout_height="@dimen/width_56dp"
        app:layout_constraintTop_toBottomOf="@id/cl_or"
        app:layout_constraintStart_toEndOf="@id/ib_apple"
        app:layout_constraintEnd_toStartOf="@id/ib_facebook"
        android:src="@drawable/img_google"
        android:scaleType="fitCenter"
        android:contentDescription="@string/labelButtonGoogle"
        android:padding="@dimen/padding_15dp"
        android:layout_marginTop="@dimen/margin_24dp"
        android:layout_marginLeft="@dimen/margin_24dp"
        android:background="@drawable/bg_btn_or"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ib_facebook"
        android:layout_width="@dimen/width_72dp"
        android:layout_height="@dimen/width_56dp"
        app:layout_constraintTop_toBottomOf="@id/cl_or"
        app:layout_constraintStart_toEndOf="@id/ib_google"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/img_fb"
        android:scaleType="fitCenter"
        android:contentDescription="@string/image_button_facebook"
        android:padding="@dimen/padding_15dp"
        android:layout_marginTop="@dimen/margin_24dp"
        android:layout_marginLeft="@dimen/margin_24dp"
        android:layout_marginRight="@dimen/margin_56dp"
        android:background="@drawable/bg_btn_or"/>

    <TextView
        android:id="@+id/tv_dont_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_72dp"
        android:text="@string/label_dont_have_an_account"
        android:textAppearance="@style/TextAppearance.Wakey.BodyMedium.Regular"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_signupLogin"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ib_google"/>

    <TextView
        android:id="@+id/tv_signupLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_4dp"
        android:text="@string/labelSignUpWakey"
        android:textAppearance="@style/TextAppearance.Wakey.BodyMedium.Regular"
        android:textColor="@color/gradient_end"
        app:layout_constraintBottom_toBottomOf="@+id/tv_dont_have_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_dont_have_account"
        app:layout_constraintTop_toTopOf="@+id/tv_dont_have_account" />

</androidx.constraintlayout.widget.ConstraintLayout>