<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterFragment"
    android:background="@color/dark_grey">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tv_register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headlineLoginWakey"
        android:textAppearance="@style/TextAppearance.Wakey.BodyLarge.Bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_56dp"
        />

    <TextView
        android:id="@+id/tv_register_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descriptionRegister"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tv_register_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_8dp"
        android:textAppearance="@style/TextAppearance.Wakey.LabelMedium.Regular"
        android:textColor="@color/white"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_register_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_56dp"
        android:padding="@dimen/padding_4dp"
        app:hintEnabled="false"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/labelEmail"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:background="@drawable/bg_input_grey"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_24dp"
        android:padding="@dimen/padding_4dp"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_password_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/labelPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:background="@drawable/bg_input_grey"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_terms_conditions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_password_register"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/labelTermsConditions"
        android:textAppearance="@style/TextAppearance.Wakey.LabelSmall.Regular"
        android:textColor="@color/white"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signup_real"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_terms_conditions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_38dp"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:background="@drawable/bg_btn_gradient"
        android:text="@string/labelSignUpWakey"
        android:textAppearance="@style/TextAppearance.Wakey.LabelMedium.Bold"
        android:textColor="@color/white"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_or_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_signup_real"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_48dp"
        android:layout_marginHorizontal="@dimen/margin_34dp"
        android:paddingHorizontal="@dimen/padding_10dp"
        >
        <View
            android:id="@+id/v_line1_register"
            android:layout_width="@dimen/line_130dp"
            android:layout_height="@dimen/line_2dp"
            android:background="@color/gray"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:id="@+id/tv_or_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelOr"
            android:textAppearance="@style/TextAppearance.Wakey.LabelMedium.Bold"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/v_line1_register"
            app:layout_constraintEnd_toStartOf="@id/v_line2_register"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <View
            android:id="@+id/v_line2_register"
            android:layout_width="@dimen/line_130dp"
            android:layout_height="@dimen/line_2dp"
            android:background="@color/gray"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ib_apple_register"
        android:layout_width="@dimen/width_72dp"
        android:layout_height="@dimen/height_56dp"
        android:src="@drawable/img_apple"
        android:contentDescription="btn_apple"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toBottomOf="@id/cl_or_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ib_google_register"
        android:layout_marginTop="@dimen/margin_24dp"
        android:layout_marginLeft="@dimen/margin_56dp"
        android:background="@drawable/bg_btn_or"
        android:padding="@dimen/padding_15dp"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ib_google_register"
        android:layout_width="@dimen/width_72dp"
        android:layout_height="@dimen/height_56dp"
        android:src="@drawable/img_google"
        android:contentDescription="btn_google"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toBottomOf="@id/cl_or_register"
        app:layout_constraintStart_toEndOf="@id/ib_apple_register"
        app:layout_constraintEnd_toStartOf="@+id/ib_facebook_register"
        android:layout_marginTop="@dimen/margin_24dp"
        android:layout_marginLeft="@dimen/margin_24dp"
        android:background="@drawable/bg_btn_or"
        android:padding="@dimen/padding_15dp"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ib_facebook_register"
        android:layout_width="@dimen/width_72dp"
        android:layout_height="@dimen/height_56dp"
        android:src="@drawable/img_fb"
        android:scaleType="fitCenter"
        android:contentDescription="btn_fb"
        app:layout_constraintTop_toBottomOf="@id/cl_or_register"
        app:layout_constraintStart_toEndOf="@id/ib_google_register"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_24dp"
        android:layout_marginLeft="@dimen/margin_24dp"
        android:layout_marginRight="@dimen/margin_56dp"
        android:background="@drawable/bg_btn_or"
        android:padding="@dimen/padding_15dp"/>

    <TextView
        android:id="@+id/tv_already_have_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_already_have_an_account"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/ib_google_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_signin_btn"
        android:textAppearance="@style/TextAppearance.Wakey.LabelMedium.Regular"
        android:layout_marginTop="@dimen/margin_48dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <TextView
        android:id="@+id/tv_signin_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelSignInWakey"
        android:textAppearance="@style/TextAppearance.Wakey.LabelMedium.Regular"
        android:textColor="@color/gradient_end"
        app:layout_constraintTop_toTopOf="@id/tv_already_have_an_account"
        app:layout_constraintStart_toEndOf="@id/tv_already_have_an_account"
        app:layout_constraintBottom_toBottomOf="@id/tv_already_have_an_account"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="@dimen/margin_4dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>